# great-expectations-example

./: README.md  example.ipynb  pyproject.toml  requirements.txt
data/: example.csv
gx/: great_expectations.yml
gx/checkpoints/: example checkpoint.yml
gx/expectations/: .ge_store_backend_id  example expectation suite.json
